# rules_scala

./: .bazelignore  .bazelrc  .gitignore  .scalafmt.conf  MODULE.bazel  README.md  WORKSPACE  test_dependency_versions.sh  test_rules_scala.sh  test_thirdparty_version.sh  test_version.sh  version.bzl
.bazelci/: presubmit.yml
dt_patches/: dt_patch_test.sh
dt_patches/test_dt_patches/: MODULE.bazel  WORKSPACE
dt_patches/test_dt_patches_user_srcjar/: MODULE.bazel  WORKSPACE
examples/crossbuild/: MODULE.bazel  WORKSPACE
examples/overridden_artifacts/: MODULE.bazel  WORKSPACE
examples/scala3/: MODULE.bazel  WORKSPACE
examples/semanticdb/: MODULE.bazel  WORKSPACE
examples/twitter_scrooge/: MODULE.bazel  WORKSPACE
protoc/private/: protoc_integrity.bzl
scala/: deps.bzl  latest_deps.bzl  scala_maven_import_external.bzl
scala/private/: common_attributes.bzl  rule_impls.bzl
scala/runtime/: bootstrap.bzl  repository.bzl  toolchain.bzl
scala_proto/: scala_proto.bzl
scripts/: README.md  create_repository.py  update_compiler_sources_integrity.py  update_protoc_integrity.py
scripts/lib/: update_integrity.py
test/: BUILD
test/compiler_sources_integrity/: BUILD  MODULE.bazel  WORKSPACE
test/jmh/: BUILD
test/proto/: BUILD  message-1.proto  message-2.proto
test/scalafmt/: .scalafmt.conf
test/sh_tests/: BUILD  ScalaTestResourcesFromLocalTargetTest.scala
test/shell/: test_bzlmod_macros.sh  test_compiler_sources_integrity.sh  test_examples.sh  (+2 more)
test_cross_build/: MODULE.bazel  WORKSPACE
test_version/: MODULE.bazel.template  WORKSPACE.template
(+29 files in other folders)
